k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fullstacksensei-website-service
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: fullstacksensei-website
